# pairing

./: Cargo.toml  README.md
benches/: pairing_benches.rs
benches/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fr.rs  mod.rs
src/: lib.rs  wnaf.rs
src/bls12_381/: ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
src/bls12_381/tests/: mod.rs
src/bn256/: README.md  ec.rs  fq.rs  fq12.rs  fq2.rs  fq6.rs  fr.rs  mod.rs
src/compact_bn256/: ec.rs  fq.rs  fq12.rs  mod.rs
src/tests/: curve.rs  engine.rs  field.rs  mod.rs  repr.rs
